<resources>
    <string name="app_name">LetsParty</string>

    <!-- Date Format -->
    <string name="dateFormat">yyyy-MM-dd HH:mm:ss</string>

    <!-- navigation icon title-->
    <string name="title_trending">Trending</string>
    <string name="title_my_event">My Events</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_me">Me</string>

    <!-- Database name-->
    <string name="db_user">users</string>
    <string name="db_event">events</string>
    <string name="db_posted_event">postedEvents</string>
    <string name="db_joined_event">joinedEvents</string>
    <string name="db_saved_event">savedEvents</string>
    <string name="db_joined_user">joinedUsers</string>
    <string name="db_friend">friends</string>
    <string name="db_notifications">notifications</string>

    <!--login screen-->
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="logout">LogOut</string>
    <string name="forgetPassword"><u>Forget password?</u></string>
    <string name="error_invalid_email">Error: Please enter a valid email!</string>
    <string name="error_empty_password">Error: Password can not be empty!</string>
    <string name="error_email_not_verified">Error: Please verify your email address before login!</string>

    <!--signup screen-->
    <string name="username">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="error_invalid_confirm_password">Error: Confirm password is not consistent with the password entered!</string>
    <string name="error_invalid_username">Error: User name can not be empty!</string>
    <string name="error_invalid_password">Error: Password should be at least 8 characters!</string>


    <!--password reset screen-->
    <string name="enter_email_for_reset">Please enter your email address, and we will send you a link to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="link_sent">A link has been sent to your email, please using it to reset your password.</string>

    <!--Trending screen-->
    <string name="search">Search</string>
    <string name="empty_result">No Result Found ～</string>

    <!--Me Screen-->
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change password</string>
    <string name="friends">Friends</string>


    <!--Event detail screen -->
    <string name="eventCategory">Category: </string>
    <string name="eventTime">Time: </string>
    <string name="eventLocation">Location: </string>
    <string name="eventPeople">Minimum Number of People: </string>
    <string name="eventOrganizer">Organizer: </string>
    <string name="eventDescription">Description: </string>
    <string name="eventFriendsOnly">Friends Only: </string>
    <string name="join">Join</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="invite">Invite Friend</string>

    <string-array name="interest_array">
        <item>Sport</item>
        <item>Kid</item>
        <item>Entertainment</item>
        <item>Music</item>
        <item>Workout</item>
        <item>Party</item>
        <item>Study</item>
        <item>Other</item>
    </string-array>

    <string name="mBuilderTitle">Areas of Interest:</string>
    <string name="mBuilderOK">OK</string>
    <string name="mBuilderDismiss">Dismiss</string>
    <string name="mBuilderClearAll">Clear all</string>

    <!--my friend screen-->
    <string name="noFriend">You do not have any Friend yet ～</string>
    <string name="mAddNewFriend">New friend</string>

    <!-- friend profile screen-->
    <string name="mRegion">Region:</string>
    <string name="interests">Interests: </string>
    <string name="mAddFriend">Add Friend</string>
    <string name="mDeleteFriend">Delete Friend</string>

    <!--Edit Profile Screen -->
    <string name="takePhoto">Take Photo</string>
    <string name="choosePhoto">Choose from Album</string>
    <string name="cancelUpload">Cancel</string>
    <string name="userName">Username: </string>
    <string name="email">Email: </string>
    <string name="interest">Area of Interest: </string>
    <string name="country">Country: </string>
    <string name="state">State: </string>
    <string name="city">City: </string>
    <string name="zipCode">Zip Code: </string>

    <!--Change Password Screen -->
    <string name="hint">Use the Form below to Change your Password ... </string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>

    <!--inbox screen-->
    <string name="noMessage">Currently No Message in your Inbox ～</string>
    <string name="friend_request">\u0020wants to be friends with you ～</string>
    <string name="friend_request_accepted">\u0020has accepted your friend request, you are friends now !</string>
    <string name="event_join_1">\u0020has joined your event\u0020</string>
    <string name="event_join_2">\u0020!</string>
    <string name="event_quit_1">\u0020has quit your event\u0020</string>
    <string name="event_quit_2">\u0020!</string>
    <string name="event_cancel">\u0020has been cancelled !</string>
    <string name="event_set">\u0020has been set. Please follow the location and schedule to join the event !</string>
    <string name="event_pending">\u0020has became pending due to someone quit the event. Sorry for the inconvenience ～</string>

    <!--Create Event Screen -->
    <string name="createEvent">Create Event</string>
    <string name="eventTitle">Title: </string>
    <string name="eventDate">Date: </string>
    <string name="eventHour">Time: </string>
    <string name="eventStreet">Street: </string>
    <string name="eventCity">City: </string>
    <string name="eventState">State: </string>
    <string name="eventCountry">Country: </string>
    <string name="eventZip">Zip Code: </string>
    <string name="eventMinPeople">Minimum People: </string>
    <string name="friendsOnly">Friends Only: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
